[gd_scene load_steps=17 format=3 uid="uid://bee5kfvslm6dd"]

[ext_resource type="Texture2D" uid="uid://dm6rfkhap8mkh" path="res://assets/enemysheet.png" id="1_i223d"]
[ext_resource type="Script" uid="uid://djfrk8di1gfwr" path="res://scripts/Enemy.gd" id="1_r4y6k"]
[ext_resource type="PackedScene" uid="uid://dbrc2mxvhy6hk" path="res://scene/shooter.tscn" id="2_yvcfn"]
[ext_resource type="Script" uid="uid://bvy1sdivrvwew" path="res://scripts/energysystem.gd" id="3_71xey"]
[ext_resource type="Texture2D" uid="uid://c1yb74x4w8qlk" path="res://assets/feather.png" id="3_id2k4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5elnk"]
atlas = ExtResource("1_i223d")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s50j"]
atlas = ExtResource("1_i223d")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bx4v"]
atlas = ExtResource("1_i223d")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2y6e"]
atlas = ExtResource("1_i223d")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4x4k"]
atlas = ExtResource("1_i223d")
region = Rect2(256, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_flvmv"]
atlas = ExtResource("1_i223d")
region = Rect2(320, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg847"]
atlas = ExtResource("1_i223d")
region = Rect2(384, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaxk3"]
atlas = ExtResource("1_i223d")
region = Rect2(448, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nxujm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5elnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s50j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bx4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2y6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4x4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flvmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg847")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaxk3")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5elnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s50j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bx4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2y6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4x4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flvmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg847")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaxk3")
}],
"loop": true,
"name": &"walk",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ej535"]
radius = 3.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7msik"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 107.454
initial_velocity_min = 75.0
initial_velocity_max = 85.0
gravity = Vector3(0, 98, 0)
damping_min = 61.383
damping_max = 100.0
scale_min = 0.3
scale_max = 0.7
turbulence_enabled = true
turbulence_influence_min = 0.05
turbulence_influence_max = 0.05

[node name="enemy" type="CharacterBody2D" groups=["Enemys"]]
z_index = 30
collision_layer = 4
collision_mask = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_r4y6k")

[node name="shooter" parent="." instance=ExtResource("2_yvcfn")]
is_Enemys = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nxujm")
animation = &"idle"
autoplay = "walk"
frame_progress = 0.397559
offset = Vector2(0, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -1
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_ej535")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 16.0
target_desired_distance = 32.0
navigation_layers = 2
avoidance_enabled = true
avoidance_layers = 2
avoidance_mask = 2

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="NavSetTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="walkanimation" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="particleWaitTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 30
emitting = false
amount = 32
texture = ExtResource("3_id2k4")
one_shot = true
preprocess = 2.0
explosiveness = 0.7
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_7msik")

[node name="energyBar" type="Node2D" parent="."]
position = Vector2(0, 8)
script = ExtResource("3_71xey")

[node name="White" type="ColorRect" parent="energyBar"]
offset_top = -3.0
offset_right = 1.0
offset_bottom = -2.0
scale = Vector2(16, 3.01309)
pivot_offset = Vector2(0.5, 0)
color = Color(0, 0, 0, 0.498039)
metadata/_edit_use_anchors_ = true

[node name="Red" type="ColorRect" parent="energyBar"]
offset_left = -7.0
offset_top = -2.0
offset_right = -6.0
offset_bottom = -1.0
scale = Vector2(14, 1)
color = Color(0.658824, 0.243137, 0.192157, 1)
metadata/_edit_use_anchors_ = true

[node name="Redextra" type="ColorRect" parent="energyBar"]
offset_left = -7.0
offset_top = -2.0
offset_right = -6.0
offset_bottom = -1.0
scale = Vector2(14, 1)
color = Color(0.658824, 0.243137, 0.192157, 1)
metadata/_edit_use_anchors_ = true

[node name="Green" type="ColorRect" parent="energyBar"]
offset_left = -7.0
offset_top = -2.0
offset_right = -6.0
offset_bottom = -1.0
scale = Vector2(10, 1)
color = Color(0.568627, 0.854902, 0.435294, 1)
metadata/_edit_use_anchors_ = true

[node name="Greenextra" type="ColorRect" parent="energyBar"]
offset_left = -7.0
offset_top = -2.0
offset_right = -6.0
offset_bottom = -1.0
scale = Vector2(10, 1)
color = Color(0.568627, 0.854902, 0.435294, 1)
metadata/_edit_use_anchors_ = true

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_teleport_timer_timeout"]
[connection signal="timeout" from="NavSetTimer" to="." method="_on_nav_set_timer_timeout"]
[connection signal="timeout" from="walkanimation" to="." method="_on_walkanimation_timeout"]
[connection signal="timeout" from="particleWaitTimer" to="." method="_on_particle_wait_timer_timeout"]
